// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders status of long-living branches 1`] = `
<Level
  level="OK"
  small={true}
/>
`;

exports[`renders status of long-living branches 2`] = `
<Level
  level="ERROR"
  small={true}
/>
`;

exports[`renders status of short-living branches 1`] = `
<ul
  className="branch-status"
>
  <li
    className="little-spacer-right"
  >
    <StatusIndicator
      color="green"
      size="small"
    />
  </li>
  <li
    className="spacer-left"
  >
    0
    <BugIcon
      className="little-spacer-left"
    />
  </li>
  <li
    className="spacer-left"
  >
    0
    <VulnerabilityIcon
      className="little-spacer-left"
    />
  </li>
  <li
    className="spacer-left"
  >
    0
    <CodeSmellIcon
      className="little-spacer-left"
    />
  </li>
</ul>
`;

exports[`renders status of short-living branches 2`] = `
<ul
  className="branch-status"
>
  <li
    className="little-spacer-right"
  >
    <StatusIndicator
      color="orange"
      size="small"
    />
  </li>
  <li
    className="spacer-left"
  >
    0
    <BugIcon
      className="little-spacer-left"
    />
  </li>
  <li
    className="spacer-left"
  >
    0
    <VulnerabilityIcon
      className="little-spacer-left"
    />
  </li>
  <li
    className="spacer-left"
  >
    1
    <CodeSmellIcon
      className="little-spacer-left"
    />
  </li>
</ul>
`;

exports[`renders status of short-living branches 3`] = `
<ul
  className="branch-status"
>
  <li
    className="little-spacer-right"
  >
    <StatusIndicator
      color="red"
      size="small"
    />
  </li>
  <li
    className="spacer-left"
  >
    7
    <BugIcon
      className="little-spacer-left"
    />
  </li>
  <li
    className="spacer-left"
  >
    6
    <VulnerabilityIcon
      className="little-spacer-left"
    />
  </li>
  <li
    className="spacer-left"
  >
    3
    <CodeSmellIcon
      className="little-spacer-left"
    />
  </li>
</ul>
`;

exports[`renders status of short-living branches 4`] = `
<ul
  className="branch-status"
>
  <li
    className="little-spacer-right"
  >
    <StatusIndicator
      color="green"
      size="small"
    />
  </li>
  <li
    className="spacer-left"
  >
    0
    <BugIcon
      className="little-spacer-left"
    />
  </li>
  <li
    className="spacer-left"
  >
    1
    <VulnerabilityIcon
      className="little-spacer-left"
    />
  </li>
  <li
    className="spacer-left"
  >
    0
    <CodeSmellIcon
      className="little-spacer-left"
    />
  </li>
  <Tooltip
    overlay="branches.short_lived.quality_gate.description.1"
    placement="right"
  >
    <li
      className="spacer-left"
    >
      <HelpIcon
        className="text-info"
      />
    </li>
  </Tooltip>
</ul>
`;
